@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <addon
-  id="skin.aeon.nox.gotham"
-  version="4.1.9.8"
-  name="Aeon Nox Gotham"
+  id="skin.aeon.nox"
+  version="4.1.9.9"
+  name="Aeon Nox Gotham Plus"
   provider-name="Big_Noid|phil65">
   <requires>
     <import addon="xbmc.gui" version="5.0.0"/>
